# so5-dining-philosophers

./: .gitignore  .hgignore  CMakeLists.txt  README.md  externals.rb  vcpkg.json
dev/: CMakeLists.txt  build.rb  local-build.rb.example
dev/dining_philosophers/actor_based/: CMakeLists.txt
dev/dining_philosophers/actor_based/common/: completion_watcher.hpp  philosopher.hpp
dev/dining_philosophers/actor_based/no_waiter_dijkstra/: CMakeLists.txt  main.cpp
dev/dining_philosophers/actor_based/no_waiter_simple/: CMakeLists.txt  main.cpp
dev/dining_philosophers/actor_based/no_waiter_simple_tp/: CMakeLists.txt  main.cpp  prj_s.rb
dev/dining_philosophers/actor_based/trace_maker/: CMakeLists.txt  all.cpp  all.hpp  prj.rb
dev/dining_philosophers/actor_based/waiter_with_queue/: CMakeLists.txt  main.cpp
dev/dining_philosophers/actor_based/waiter_with_timestamps/: CMakeLists.txt  main.cpp  prj_s.rb
dev/dining_philosophers/common/: defaults.hpp  fork_messages.hpp  trace.hpp  types.hpp
dev/dining_philosophers/csp_based/common/: philosopher.hpp
dev/dining_philosophers/csp_based/no_waiter_dijkstra/: main.cpp  prj_s.rb
dev/dining_philosophers/csp_based/no_waiter_simple/: main.cpp  prj_s.rb
dev/dining_philosophers/csp_based/trace_maker/: all.cpp  all.hpp  prj.rb
dev/dining_philosophers/csp_based/waiter_with_timestamps/: main.cpp  prj_s.rb
dining_philosophers/: CMakeLists.txt
dining_philosophers/actor_based/common/: philosopher.hpp
dining_philosophers/actor_based/no_waiter_dijkstra/: main.cpp  prj_s.rb
dining_philosophers/actor_based/no_waiter_simple/: prj_s.rb
dining_philosophers/actor_based/waiter_with_queue/: main.cpp  prj_s.rb
dining_philosophers/common/: random_generator.hpp
dining_philosophers/csp_based/: CMakeLists.txt
dining_philosophers/csp_based/common/: philosopher.hpp
dining_philosophers/csp_based/no_waiter_dijkstra/: CMakeLists.txt
dining_philosophers/csp_based/no_waiter_simple/: CMakeLists.txt  main.cpp
dining_philosophers/csp_based/trace_maker/: CMakeLists.txt
dining_philosophers/csp_based/waiter_with_timestamps/: CMakeLists.txt  main.cpp
